--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,12 @@
 <h2><%= @task.title %></h2>
 <p><%= @task.details %></p>
+
+<%= link_to "Edit #{@task.title}",
+edit_task_path(@task) %>
+
 <%= link_to "Delete #{@task.title}",
 task_path(@task),
 method: :delete,
 data: { confirm: "Are you sure you want to delete this task?" } %>
 
-<h3><%= link_to "Back to list", task_path %></h3>
+<h3><%= link_to "Back to list", tasks_path %></h3>
